Fix: adjusted :before overlay to allow tile image visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2801,7 +2801,7 @@ input, select, textarea {
 				display: block;
 				height: 100%;
 				left: 0;
-				opacity: 0.85;
+				opacity: 0.3;
 				position: absolute;
 				width: 100%;
 				z-index: 2;
